objects/Contact.object
<CustomObject><fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Contact Details Captured", "Missing: "&amp;IF( LEN( Phone ) = 0, "Phone, ","")&amp;""&amp;IF(LEN( Email) = 0, "Email, ","")&amp;""&amp;IF( LEN( MailingStreet ) = 0, "Complete Address, ","")&amp;""&amp;IF( LEN(Title) = 0, "Job Title, ","")&amp;""&amp;IF( ISPICKVAL( Salutation,""), "Salutation",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,""), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Decision_maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the lead a decision maker?</description>
        <inlineHelpText>Is the lead a decision maker?</inlineHelpText>
        <label>Decision maker</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <description>UD Regions</description>
        <globalPicklist>UD_Regions</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>yhLinkedIn3__c</fullName>
        <formula>HYPERLINK("http://www.linkedin.com/in/" &amp;  FirstName &amp; LastName , "LinkedIn")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>yhLinkedIn3</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>Phone_and_Email</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews><listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews><listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><recordTypes>
        <fullName>InternalContact</fullName>
        <active>true</active>
        <description>all contact within the company</description>
        <label>InternalContact</label>
    </recordTypes></CustomObject>